<resources>
    <string name="app_name">IT_g12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sign_in">Set Account</string>
    <string name="menu_map">Map</string>
    <string name="menu_poilist">Your Points of Interest</string>
    <string name="menu_tools">Change Account</string>
    <string name="menu_share">Share</string>
    <string name="menu_create">New Point of Interest</string>

    <!-- Universal strings -->
    <string name="point_of_interest">Point of Interest</string>

    <!-- Welcome fragment strings -->
    <string name="welcome_welcome_string">Welcome to</string>
    <string name="sign_in_demand_string">Sign in with your…</string>

    <string name="list_string">List of Points of Interest go here. </string>

    <string name="account_type_string">Sign in with Google</string>

    <string name="poi_discovered_string">Point of Interest discovered!</string>

    <string name="poi_image_string">Image of the Point of Interest.</string>
    <string name="poi_category_image_string">Image of the category.</string>

    <string name="form_title">Title</string>
    <string name="autofillHints_form_title">Point of Interest</string>

    <string name="form_category">Category</string>

    <string name="form_comments">Comments</string>
    <string name="autofillHints_form_comments">I like this place.</string>

    <string name="form_latitude">Latitude</string>
    <string name="autofillHints_latitude">10.030579</string>

    <string name="form_longitude">Longitude</string>
    <string name="autofillHints_longitude">56.170128</string>

    <string name="autofillHint_gmail">ends with @gmail.com</string>

    <array name="categories">
        <item>Events</item>
        <item>Nature</item>
        <item>Shopping</item>
        <item>Cozy places</item>
        <item>Cafe</item>
    </array>

    <string name="refresh_list">Refresh list</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="splash_screen_line">Point of Interest</string>
    <string name="location">Location</string>

    <!-- Strings used in bottom sheet-->
    <string name="point_of_interest_discovered">Point of Interest discovered!</string>

    <!-- Strings used for splash screen -->
    <string name="the_splash_screen_icon_for_the_point_of_interest">The splash screen icon for the Point of Interest.</string>
    <string name="return_to_map">Return to map</string>
    <string name="point_of_interest_logo">Point of Interest logo</string>
</resources>
