<?xml version="1.0" encoding="utf-8"?>
<!-- This fragment contains the form elements in the application. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Holds the ID of what the fragment is. -->
    <TextView
        android:id="@+id/add_poi_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Text field for Point of Interest title. -->
    <EditText
        android:id="@+id/txttitle"
        android:layout_width="356dp"
        android:layout_height="45dp"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="@string/form_title"
        android:autofillHints="@string/autofillHints_form_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!-- Text field for showing and editing comments to the location. -->
    <EditText
        android:id="@+id/txt_comments"
        android:layout_width="305dp"
        android:layout_height="115dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:hint="@string/form_comments"
        android:autofillHints="@string/autofillHints_form_comments"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Text view telling the user, that they are supposed to add a Point of Interest. -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Add point of Interest at:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_poi_title"
        tools:layout_constraintVertical_bias="-0.15" />

    <!-- Confirm button for adding a Point of Interest. -->
    <Button
        android:id="@+id/add_poi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add point of Interest!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toEndOf="@+id/cancelbutton" />

    <!-- Spinner showing the categories. -->
    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="356dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:entries="@array/categories"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitle" />

    <!-- Cancel button for not adding a Point of Interest. -->
    <Button
        android:id="@+id/cancelbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Shows Latitude and Longitude for the set marker. -->
    <TextView
        android:id="@+id/LatLngFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="115dp"
        android:text="@string/form_latitude"
        app:layout_constraintBottom_toTopOf="@+id/txttitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>